@@ -1,6 +1,7 @@
 1.8
  * Added custom tracert and whois support
  * Added geoip lookup for country name and image
+ * Added Tools menu > Network Tools > options
 
 1.7
  * Added option to specify ping buffer length
